NXP-2827 - use org.nuxeo.common.utils.Base64 instead of sun.misc.BASE64Decoder